--- a/BE-threads/package.json
+++ b/BE-threads/package.json
@@ -29,6 +29,7 @@
    },
    "scripts": {
       "start": "nodemon --exec ts-node src/index.ts",
+      "worker": "nodemon --exec ts-node src/worker/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "migration:generate": "npx typeorm-ts-node-commonjs migration:generate src/migration/threads-migration -d src/data-source.ts",
       "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/data-source.ts"
