--- a/BE-threads/package.json
+++ b/BE-threads/package.json
@@ -25,7 +25,8 @@
       "nodemon": "^3.0.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.17"
+      "typeorm": "0.3.17",
+      "yarn": "^1.22.21"
    },
    "scripts": {
       "start": "nodemon --exec ts-node src/index.ts",
